<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright (c) 2013 Mark O. Busby
     Licensed under the MIT license (see LICENSE.txt)
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        android:showAsAction="ifRoom"
        android:actionProviderClass="android.widget.ShareActionProvider"/>
        <!--android:icon="@android:drawable/ic_menu_share"-->
    <!--<item android:id="@+id/action_donate"-->
        <!--android:title="@string/action_donate"-->
        <!--android:icon="@drawable/ic_action_donate"-->
        <!--android:showAsAction="ifRoom" />-->
    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
